# back-of-the-neural-net

./: .env.example  .gitignore  AGENTS.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_TODO_BASKET_ROUND3.md  IMPLEMENTATION_SUMMARY_TODO_BASKET_ROUND5.md  README.md  TODO.md  demo_llm.py  demo_todo_basket_round5.py  demo_todo_features.py  demo_tools.py  main.py  pyproject.toml  simple_test.py  test_llm_config.py  test_match_events.py  test_match_reports.py  test_mcp.py  test_new_entities.py  test_reputation.py
docs/archive/: IMPLEMENTATION_SUMMARY_TODO_BASKET.md  IMPLEMENTATION_SUMMARY_TODO_BASKET_ROUND4.md  IMPLEMENTATION_SUMMARY_TODO_BASKET_ROUND6.md  IMPLEMENTATION_SUMMARY_TODO_BASKET_ROUND7.md  README.md
scripts/demos/: README.md  demo.py  demo_llm.py  demo_todo_basket.py  demo_todo_basket_round4.py  demo_todo_basket_round5.py  demo_todo_basket_round6.py  demo_todo_basket_round7.py  (+2 more)
tests/: test_basic.py  test_calendar_system.py  test_club_details.py  test_comprehensive_match_reports.py  test_expanded_features.py  test_financial_and_stats.py  test_issue_56_regression.py  test_issue_58_regression.py  test_issue_solved.py  test_match_reports_fix.py  test_match_reports_issue.py  test_match_statistics.py  test_mcp.py  test_new_entities.py  test_player_contracts.py  test_player_stats.py  test_player_stats_fix.py  test_second_yellow_cards.py  test_todo_basket.py  test_todo_basket_round3.py  test_todo_basket_round4.py  test_todo_basket_round5.py  test_todo_basket_round6.py  test_todo_basket_round7.py
ui/: .gitignore  next.config.ts  package-lock.json  package.json
(+29 files in other folders)
